# oracle-studio

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
crates/oracle-studio-app/: Cargo.toml
crates/oracle-studio-app/src/: lib.rs
crates/oracle-studio-app/tests/: workflows.rs
crates/oracle-studio-assets/: Cargo.toml
crates/oracle-studio-assets/src/: lib.rs
crates/oracle-studio-assets/tests/: assets.rs
crates/oracle-studio-chart-view/: Cargo.toml
crates/oracle-studio-chart-view/src/: lib.rs
crates/oracle-studio-chart-view/tests/: view_model.rs
crates/oracle-studio-cli/: Cargo.toml
crates/oracle-studio-cli/src/: main.rs
crates/oracle-studio-cli/tests/: cli.rs
crates/oracle-studio-core/: Cargo.toml
crates/oracle-studio-core/src/: lib.rs
crates/oracle-studio-core/tests/: model.rs
crates/oracle-studio-storage/: Cargo.toml
crates/oracle-studio-storage/src/: lib.rs
crates/oracle-studio-storage/tests/: storage.rs
crates/oracle-studio-vault/: Cargo.toml
crates/oracle-studio-vault/src/: lib.rs
docs/: APPLICATION_WORKFLOWS.md  CLI_TESTING.md  COMPOSITION_MODEL.md  DECK_PACKS.md  PHASE_5_PLAN.md  VAULT.md
