[package]
name = "oracle-studio-app"
version = "0.1.0"
description = "Offline application workflows for Oracle Studio"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oracle-studio-core = { version = "0.1.0", path = "../oracle-studio-core" }
sibylla-artifacts = { version = "0.1.0", git = "https://github.com/gracee3/sibylla", rev = "a154c32b83b110d2568a9ab10828b4f8b3dba7c7" }
sibylla-core = { version = "0.1.0", git = "https://github.com/gracee3/sibylla", rev = "a154c32b83b110d2568a9ab10828b4f8b3dba7c7" }
sibylla-shuffle = { version = "0.1.0", git = "https://github.com/gracee3/sibylla", rev = "a154c32b83b110d2568a9ab10828b4f8b3dba7c7" }
thiserror.workspace = true

[dev-dependencies]
astraeus-artifacts = { version = "0.1.0", git = "https://github.com/gracee3/astraeus", rev = "eb9a756d0d2814f55fcb6f29bdc99c8bb28df85a" }
astraeus-core = { version = "0.1.0", git = "https://github.com/gracee3/astraeus", rev = "eb9a756d0d2814f55fcb6f29bdc99c8bb28df85a" }
