[package]
name = "oracle-studio-cli"
version = "0.1.0"
description = "Guided offline command-line interface for Oracle Studio"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "oracle-studio"
path = "src/main.rs"

[dependencies]
astraeus-core = { version = "0.1.0", git = "https://github.com/gracee3/astraeus", rev = "52d24862b8287b89b0986b7799583d82ecab21e9" }
chrono.workspace = true
clap.workspace = true
oracle-studio-app = { version = "0.1.0", path = "../oracle-studio-app" }
oracle-studio-assets = { version = "0.1.0", path = "../oracle-studio-assets" }
oracle-studio-core = { version = "0.1.0", path = "../oracle-studio-core" }
oracle-studio-storage = { version = "0.1.0", path = "../oracle-studio-storage" }
rpassword = "7.4.0"
sibylla-artifacts = { version = "0.1.0", git = "https://github.com/gracee3/sibylla", rev = "a154c32b83b110d2568a9ab10828b4f8b3dba7c7" }
sibylla-core = { version = "0.1.0", git = "https://github.com/gracee3/sibylla", rev = "a154c32b83b110d2568a9ab10828b4f8b3dba7c7" }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
getrandom.workspace = true
