[package]
name = "oracle-studio-storage"
version = "0.1.0"
description = "Atomic encrypted local-vault persistence for Oracle Studio"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fs2.workspace = true
getrandom.workspace = true
oracle-studio-core = { version = "0.1.0", path = "../oracle-studio-core" }
oracle-studio-vault = { version = "0.1.0", path = "../oracle-studio-vault" }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
oracle-studio-core = { version = "0.1.0", path = "../oracle-studio-core" }
