[package]
name = "oracle-studio-vault"
version = "0.1.0"
description = "Authenticated local vault envelope for Oracle Studio"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
oracle-studio-core = { version = "0.1.0", path = "../oracle-studio-core" }
thiserror.workspace = true
zeroize.workspace = true
